--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "fuse.js": "^7.1.0",
     "globby": "^14.0.0",
     "gray-matter": "^4.0.3",
-    "next": "15.4.6",
+    "next": "^15.5.2",
     "next-mdx-remote": "^5.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -56,7 +56,6 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
-    "jest-axe": "^9.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -67,6 +66,7 @@
     "eslint-config-next": "15.4.6",
     "eslint-plugin-storybook": "^9.1.2",
     "happy-dom": "^15.11.6",
+    "jest-axe": "^9.0.0",
     "playwright": "^1.54.2",
     "storybook": "^9.1.2",
     "tailwindcss": "^4",
